# WaitingTheLongestFinal

./: .dockerignore  .editorconfig  .env.example  .gitignore  BUSINESS_PLAN.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODING_STANDARDS.md  COMMUNICATION_PROTOCOL.md  DATA_SOURCES_STRATEGY.md  DEVELOPER_NOTES.md  Dockerfile  FILESLIST.md  GEMINI_ARCHITECTURE_REPORT.md  LAUNCH_BLUEPRINT.md  LICENSE  PROGRESS_REPORT.md  README.md  SITE_WIKI.md  VERIFIED_WAIT_TIME_AUDIT.md  WORK_LOG.md  WORK_SCHEDULE.md  build.bat  docker-compose.production.yml  docker-compose.yml  middleware.ts  migrate.bat  next.config.mjs  package-lock.json  package.json  run.bat  setup-autostart.bat  setup.bat  start-agents.bat  start-agents.ps1  tailwind.config.ts  tsconfig.json  vercel.json
.github/workflows/: build.yml
agent/: README.md  backup.ts  dashboard.html  date-audit.ts  freshness.ts  improve-dashboard.html  improve.ts  index.ts  intelligence.ts  run-backup.bat  scraper-dashboard.html  scraper.ts  setup-scheduler.ps1  start-all.ts
config/: aggregators.json  config.example.json  config.json  config.production.json  logrotate.conf  media_config.json  tiktok_templates.json
content_templates/blog/: dog_feature.md.template  success_story.md.template  urgent_roundup.md.template
content_templates/email/: match_notification.html  urgent_alert.html  weekly_digest.html
content_templates/sms/: urgent_alert.txt
content_templates/social/: facebook_post.json  instagram_caption.json  twitter_thread.json
content_templates/tiktok/: foster_plea.json  longest_waiting.json  overlooked_angel.json  success_story.json  urgent_countdown.json
data/: seed-all.ts  seed-breeds.ts  seed-shelters.ts  seed-states.ts  setup-database.ts
docs/: ENVIRONMENT_VARIABLES.md
docs/archive/: BUILD_PLAN.md  CONTRIBUTING.md  IMPROVEMENT_CHECKLIST.md  INTEGRATION_CONTRACTS.md
nginx/: nginx.conf
public/: manifest.json
scripts/: api_integration_test.sh  backup-to-drive.sh  backup_db.sh  bulk-reeval.js  classify-shelters.ts  db_maintenance.sh  export-dogs.ts  export-shelters.ts  fix-wait-times.ts  import_data.py  init-db.sh  load_test.sh  smoke_test.sh  validate_deploy.sh
scripts/build_debug/: __init__.py  auto_fixer.py  build_agent.py  cmake_builder.py  config.py  docker_builder.py  error_categorizer.py  error_parser.py  fix_suggester.py  models.py  report_generator.py  session_tracker.py
sql/: init.sh
sql/core/: 000_migration_tracking.sql  001_extensions.sql  002_states.sql  003_shelters.sql  004_dogs.sql  005_users.sql  006_sessions.sql  007_favorites.sql  008_foster_homes.sql  009_foster_placements.sql  010_debug_schema.sql  011_indexes.sql  012_views.sql  013_functions.sql  014_dog_breeds.sql  seed_breeds.sql  seed_states.sql
sql/modules/: admin_schema.sql  adoption_support_schema.sql  aggregator_schema.sql  analytics_schema.sql  blog_schema.sql  housing_schema.sql  matching_schema.sql  media_schema.sql  notifications_schema.sql  scheduler_schema.sql  social_schema.sql  sponsorship_schema.sql  templates_schema.sql  tiktok_schema.sql  transport_schema.sql
src/: main.cc  middleware.ts
src/admin/: AdminService.cc  AdminService.h  AuditLog.cc  AuditLog.h  SystemConfig.cc  SystemConfig.h
src/aggregators/: AggregatorManager.cc  AggregatorManager.h  BaseAggregator.cc  BaseAggregator.h  DataMapper.cc  DataMapper.h  DuplicateDetector.cc  DuplicateDetector.h  IAggregator.h  RescueGroupsAggregator.cc  RescueGroupsAggregator.h  ShelterDirectAggregator.cc  ShelterDirectAggregator.h  SyncStats.h
src/analytics/: AnalyticsEvent.cc  AnalyticsEvent.h  AnalyticsService.cc  AnalyticsService.h  AnalyticsWorker.cc  AnalyticsWorker.h  DashboardStats.cc  DashboardStats.h  EventType.h  ImpactTracker.cc  ImpactTracker.h  MetricsAggregator.cc  MetricsAggregator.h  ReportGenerator.cc  ReportGenerator.h  SocialAnalytics.cc  SocialAnalytics.h
src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
src/clients/: HttpClient.cc  HttpClient.h  OAuth2Client.cc  OAuth2Client.h  RateLimiter.cc  RateLimiter.h
src/controllers/: AdminController.cc  AdminController.h  AggregatorController.cc  AggregatorController.h  AnalyticsController.cc  AnalyticsController.h  BlogController.cc  BlogController.h  MediaController.cc  MediaController.h  NotificationController.cc  NotificationController.h  TemplateController.cc  TemplateController.h  TikTokController.cc  TikTokController.h
src/core/: EventBus.h  EventType.h
src/data/: breed-product-map.ts  gov-open-data-sources.ts  high-volume-shelters.ts  stray-hold-days.ts
src/lib/: constants.ts  dog-queries.ts
src/modules/: IModule.h  ModuleConfig.cc  ModuleConfig.h  ModuleLoader.cc  ModuleLoader.h  ModuleManager.cc  ModuleManager.h
src/notifications/: Notification.cc  Notification.h  NotificationService.cc  NotificationService.h  NotificationType.h  NotificationWorker.cc  NotificationWorker.h
src/types/: dog.ts  monetization.ts  shelter-crm.ts  shelter.ts  state.ts
src/workers/: ApiSyncWorker.cc  ApiSyncWorker.h  BaseWorker.cc  BaseWorker.h  CleanupWorker.cc  CleanupWorker.h  ContentGenerationWorker.cc  ContentGenerationWorker.h  HealthCheckWorker.cc  HealthCheckWorker.h  IWorker.h  UrgencyUpdateWorker.cc  UrgencyUpdateWorker.h  WorkerManager.cc  WorkerManager.h
static/: 404.html  500.html  dog.html  dogs.html  humans.txt  index.html  manifest.json  quiz.html  robots.txt  search.html  sitemap.xml  state.html  states.html  sw-notifications.js
static/.well-known/: security.txt
static/admin/: index.html
static/css/: led-counter.css  main.css
static/js/: analytics-tracker.js  error-handler.js  led-counter.js  notifications.js  search.js  social-share.js  websocket-client.js
supabase/: config.toml  setup.sql
supabase/migrations/: 001_states.sql  002_shelters.sql  003_dogs.sql  004_breeds.sql  005_views.sql  006_users_favorites.sql  007_audit_system.sql  (+13 more)
tests/: breed-slug.test.ts  dog-availability.test.ts  dog-queries.test.ts  parse-description-date.test.ts  rescuegroups-mapper.test.ts  state-page.test.ts  test_main.cc  verification-badge.test.ts
(+431 files in other folders)
